Fix name header on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ article {
 	article p {
 		margin: 0 auto;
 		max-width: 768px;
-		padding-bottom: 2rem;
+		padding-bottom: 1.5rem;
 	}
 
 #skrollr-body, #skrollr-body2 {
@@ -170,7 +170,7 @@ footer {
 		padding: 2rem;
 	}
 	.jumbotron h1 {
-		font-size: 4rem;
+		font-size: 3.8rem;
 		margin: 0 auto;
 	}
 	.jumbotron h2 {
@@ -192,7 +192,7 @@ footer {
 		padding: 2rem;
 	}
 	.jumbotron h1 {
-		font-size: 3.8rem;
+		font-size: 3.2rem;
 		margin: 0 auto;
 	}
 	.jumbotron h2 {
@@ -202,7 +202,7 @@ footer {
 	}
 	article {
 		/*font-size: 1.1rem;*/
-		line-height: 1.5rem;
+		line-height: 1.3rem;
 		padding: 0 1rem 1rem 1rem;
 	}
 	article p {
